Button alignment fixed

--- a/src/assets/components/Button.css
+++ b/src/assets/components/Button.css
@@ -1,5 +1,5 @@
 .glow-btn {
-    padding: 1.5%;
+    padding: 2%;
     font-size: 41px;
     border: black 4px solid;
     border-radius: 15px;
